cambios esteticos y anulamos boton de calculo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div id="valor-factura">
     <label id="textInput">Valor de la factura</label>
     <input type="number" id="valorFactura"/>
-    <button id="calcular">Calcular imputaciones</button>
+    <!-- <button id="calcular">Calcular imputaciones</button> -->
 </div>
 </div>
 
