--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- <script src="calc_values.js"></script> -->
 
 <header class="header">
-
+    <label id="titulo">Telefonia Travel Services</label>
 </header>
 
 <div id="card">
@@ -49,6 +49,17 @@
     </table>
 
 </div>
+
+<footer class="footSite">
+
+
+<div id="logos">
+    <img src="linkedin.png" id="logo-one">
+    <img src="gitImg.png" id="logo-two">
+    <img src="gmail.png" id="logo-three">
+</div>
+<label id="marca">Developed by Spyle Solutions ®</label>
+</footer>
 <script src="readCSV.js"></script>
 
 <script src="front.js"></script>
