boton descarga tabla

--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
     </table>
 
 </div>
-
+<button id="btnDownload" onclick="exportTable('myTable','calculoPorcentajes')"> Download Excel</button>
 <footer class="footSite">
 
 
 <div id="logos">
-    <img src="linkedin.png" id="logo-one">
-    <img src="gitImg.png" id="logo-two">
-    <img src="gmail.png" id="logo-three">
+    
+    <a href="www.linkedin.com/in/nahuel-mendiolar-a21b36164" target="_blank"><img src="linkedin.png" id="logo-one"></a>
+    <a href="https://github.com/MendioX" target="_blank"><img src="gitImg.png" id="logo-two"></a>
+    <a href="mailto:mendiolarcolombonahuelmt6@gmail.com" target="_blank"><img src="gmail.png" id="logo-three"></a>
 </div>
 <label id="marca">Developed by Spyle Solutions ®</label>
 </footer>
