--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <div id="logos">
     
-    <a href="www.linkedin.com/in/nahuel-mendiolar-a21b36164" target="_blank"><img src="linkedin.png" id="logo-one"></a>
+    <a href="https://www.linkedin.com/in/nahuel-mendiolar-a21b36164/" target="_blank"><img src="linkedin.png" id="logo-one"></a>
     <a href="https://github.com/MendioX" target="_blank"><img src="gitImg.png" id="logo-two"></a>
     <a href="mailto:mendiolarcolombonahuelmt6@gmail.com" target="_blank"><img src="gmail.png" id="logo-three"></a>
 </div>
