--- a/index.html
+++ b/index.html
@@ -17,20 +17,25 @@
 </header>
 
 <div id="card">
-<form id="form">
+<div id="form">
+    <div id="uploadViewCsv">
     <img src="csvImg.png" id="imgCSV">
     <input type="file" id="uploadFile" accept=".csv"/><br>
     <button class="file-upload">Seleccione archivo</button>
     <br>
     <label id="mensaje">Inserte un archivo CSV</label>
-</form>
+    </div>
+    
+</div>
+    <!-- <button id="calcular">Calcular imputaciones</button> -->
+
+</div>
+
 <div id="valor-factura">
     <label id="textInput">Valor de la factura</label>
     <input type="number" id="valorFactura"/>
-    <!-- <button id="calcular">Calcular imputaciones</button> -->
-</div>
-</div>
-
+    
+    </div>
 <div id="tableBox">
 <div id="newLabel"></div>
     <table id="myTable">
