fix/update internacional prorrat

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <th>Total llamadas</th>
             <th> % del Total </th>
             <th> % a Pagar</th>
+            <th> % a Pagar nac</th>
+            <th> % a Pagar int</th>
         </thead>
         <tbody id="bodytable">
             
